# linked-In-scrapping

./: .gitignore  .replit  Ejemplodeempresas.xlsx  README.md  manage.py  pyproject.toml  req.txt
.local/state/replit/agent/: .latest.json
attached_assets/: Pasted-Replit-Vibe-Coding-Prompt-Django-LinkedIn-Collector-text-Build-a-COMPLETE-Django-web-application--1764366044632_1764366044635.txt
core/: __init__.py  admin.py  models.py  urls.py  views.py
core/management/commands/: import_excel_data.py  import_keywords.py  import_people.py  scrape_profiles.py  seed_sample_data.py
core/migrations/: 0001_initial.py  0002_company_exportjob_alter_match_options_and_more.py
linkedin_collector/: __init__.py  settings.py  wsgi.py
scraper/: __init__.py  google_cse.py  keyword_matcher.py  linkedin_parser.py
templates/: dashboard.html
